# Bone-MDP-Prediction

./: PUBLISHING_NOTES.md  README.md  Run-Windows.bat  environment.dl_env.yml  environment.img_env.yml  launch_local.command  main.py  pyproject.toml
assets/: model_assets.json
mdp_bm_predictor/: __init__.py  __main__.py  annotation_utils.py  assets_loader.py  config.py  deep_client.py  deep_worker.py  gui.py  image_utils.py  pipeline.py  predictors.py  radiomics_utils.py  runtime_utils.py
requirements/: app.txt  dl.txt
scripts/: bootstrap.py  bootstrap_windows.ps1  bootstrap_windows.py  healthcheck.py
